--- a/salam-online.html
+++ b/salam-online.html
@@ -1,112 +1,19 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="fa-IR">
+
 <head>
 	<title>Salam Programming Language</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" href="salam_logo.png" type="image/x-icon">
 </head>
+
 <body>
 	<textarea id="code"></textarea>
 	<button id="execute" disabled="true">اجرا</button>
 	<iframe></iframe>
-	<pre></pre> <!-- این تگ به کد اضافه شد -->
-	<script>
-		let $ = document
-		const codeTextArea = $.querySelector('#code');
-		const executeButton = $.querySelector('#execute');
-		const outputPre = $.querySelector('pre');
-		const iframe = $.querySelector('iframe');
-
-		codeTextArea.addEventListener('keydown', function (event) {
-			if (event.key === 'Tab') {
-				event.preventDefault();
-				const textarea = this;
-				const start = textarea.selectionStart;
-				const end = textarea.selectionEnd;
-				textarea.value = textarea.value.substring(0, start) + '\t' + textarea.value.substring(end);
-				textarea.selectionStart = textarea.selectionEnd = start + 1;
-			}
-		});
-
-		const args = ['code', ''];
-		let isReady = false;
-
-		var Module = {
-			noInitialRun: true,
-			onRuntimeInitialized: () => {
-				console.log('Salam loaded successfully');
-				isReady = true;
-				executeButton.disabled = false;
-
-				if (codeTextArea.value.toString().trim() !== '') {
-					runSalam();
-				}
-			},
-			print: (text) => {
-				console.log(text);
-			}
-		};
-
-		function captureOutput(arguments) {
-			if (outputPre) {
-				outputPre.textContent = '';
-			}
-
-			let output = '';
-
-			const originalConsoleLog = console.log;
-			console.log = function (text) {
-				output += text + '\n';
-			};
-
-			callMain(arguments);
-
-			console.log = originalConsoleLog;
-
-			if (outputPre) {
-				outputPre.textContent = output;
-
-				const iframeDocument = iframe.contentDocument || iframe.contentWindow.document;
-				if (iframeDocument) {
-					iframeDocument.open();
-					iframeDocument.write(output);
-					iframeDocument.close();
-				}
-			}
-
-			return output;
-		}
-
-		function runSalam() {
-			console.log('Running Salam code...');
-			const code = codeTextArea.value.toString().trim();
-
-			if (!code) {
-				alert('Code is empty! Please enter Salam code.');
-				return;
-			}
-
-			args[1] = code;
-			console.log('Calling Salam with arguments:', args);
-
-			if (isReady) {
-				captureOutput(args);
-				iframe.style.right = 0
-			} else {
-				console.log('Salam runtime not ready. Please wait...');
-			}
-		}
-
-		executeButton.addEventListener('click', () => {
-			runSalam();
-		});
-
-		const script = document.createElement('script');
-		script.type = 'text/javascript';
-		script.src = 'salam-wa.js';
-		document.body.appendChild(script);
-	</script>
+	<script src="script.js"></script>
 </body>
+
 </html>
