feat(pre): add pre tag

--- a/salam-online.html
+++ b/salam-online.html
@@ -13,7 +13,7 @@
 	<textarea id="code"></textarea>
 	<button id="execute" disabled="true">اجرا</button>
 	<iframe></iframe>
+	<pre style="display: none;"></pre>
 	<script src="script.js"></script>
 </body>
-
 </html>
