feat(style): change style

--- a/salam-online.html
+++ b/salam-online.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
+	<header>
+		<button id="execute" disabled="true">اجرا</button>
+	</header>
 	<textarea id="code"></textarea>
-	<button id="execute" disabled="true">اجرا</button>
 	<iframe></iframe>
 	<pre></pre>
 	<script src="script.js"></script>
