feat(toggle): add toggle btn

--- a/salam-online.html
+++ b/salam-online.html
@@ -12,6 +12,13 @@
 <body>
 	<header>
 		<button id="execute" disabled="true">اجرا</button>
+		<div>
+			<span>تغییر حالت</span>
+			<label class="switch">
+				<input type="checkbox" id="toggleBtn">
+				<span class="slider"></span>
+			</label>
+		</div>
 	</header>
 	<textarea id="code"></textarea>
 	<iframe></iframe>
