feat(exe): add exe

--- a/salam-online.html
+++ b/salam-online.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<button id="execute" disabled="true">اجرا</button>
-		<a href="./index.exe" download="true" id="download">دانلود نرم افزار</a>
+		<a href="./index.exe" download="salam.exe" id="download">دانلود نرم افزار</a>
 	</header>
 	<textarea id="code"></textarea>
 	<iframe></iframe>
