--- a/salam-online.html
+++ b/salam-online.html
@@ -2,7 +2,7 @@
 <html dir="rtl" lang="fa-IR">
 
 <head>
-	<title>Salam Programming Language</title>
+	<title>آزمایش آنلاین زبان برنامه نویسی سلام - برنامه نویسی برای همه</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style/style.css">
