--- a/salam-online.html
+++ b/salam-online.html
@@ -2,10 +2,16 @@
 <html dir="rtl" lang="fa-IR">
 
 <head>
-	<title>آزمایش آنلاین زبان برنامه نویسی سلام - برنامه نویسی برای همه</title>
 	<meta charset="UTF-8">
+	<title>آزمایش آنلاین زبان برنامه نویسی سلام - برنامه نویسی برای همه</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style/style.css">
+	<link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+	<link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
