--- a/salam-online.html
+++ b/salam-online.html
@@ -15,12 +15,13 @@
 	</head>
 	<body>
 		<header>
-			<button id="execute" disabled="true">اجرا</button>
-			<a href="https://github.com/SalamLang/Salam-Desktop/raw/main/salam-windows.exe" download="salam-salam.exe" id="download">دانلود نرم افزار</a>
+			<button class="execute" disabled="true">اجرا</button>
+			<a href="https://github.com/SalamLang/Salam-Desktop/raw/main/salam-windows.exe" download="salam-salam.exe" class="download">دانلود نرم افزار</a>
 		</header>
-		<textarea id="code"></textarea>
-		<iframe></iframe>
-		<pre></pre>
+		<textarea class="code"></textarea>
+		<iframe class="iframe"></iframe>
+		<pre class="output"></pre>
+		<pre class="error"></pre>
 	
 		<script src="script/script.js"></script>
 	</body>
