--- a/salam-online.html
+++ b/salam-online.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<header>
-			<button class="execute" disabled="true">اجرا</button>
+			<button class="execute" disabled="">اجرا</button>
 			<a href="https://github.com/SalamLang/Salam-Desktop/raw/main/salam-windows.exe" download="salam-salam.exe" class="download">دانلود نرم افزار</a>
 		</header>
 		<textarea class="code"></textarea>
