--- a/salam-online.html
+++ b/salam-online.html
@@ -14,10 +14,11 @@
 		<link rel="manifest" href="manifest.json">
 	</head>
 	<body>
-		<header>
+		<header class="header">
 			<button class="execute" disabled="">اجرا</button>
 			<a href="https://github.com/SalamLang/Salam-Desktop/raw/main/salam-windows.exe" download="salam-salam.exe" class="download">دانلود نرم افزار</a>
 		</header>
+		
 		<textarea class="code"></textarea>
 		<iframe class="iframe"></iframe>
 		<pre class="output"></pre>
