--- a/salam-online.html
+++ b/salam-online.html
@@ -19,7 +19,9 @@
 			<a href="https://github.com/SalamLang/Salam-Desktop/raw/main/salam-windows.exe" download="salam-salam.exe" class="download">دانلود نرم افزار</a>
 		</header>
 		
-		<textarea class="code"></textarea>
+		<textarea class="code">صفحه:
+    محتوا = «سلام دنیا»
+تمام</textarea>
 		<iframe class="iframe"></iframe>
 		<pre class="output"></pre>
 		<pre class="error"></pre>
