feat(download): remove download btn

--- a/salam-online.html
+++ b/salam-online.html
@@ -16,7 +16,7 @@
 	<body>
 		<header class="header">
 			<button class="execute" disabled="">اجرا</button>
-			<a href="https://github.com/SalamLang/Salam-Desktop/raw/main/salam-windows.exe" download="salam-salam.exe" class="download">دانلود نرم افزار</a>
+			<!-- <a href="https://github.com/SalamLang/Salam-Desktop/raw/main/salam-windows.exe" download="salam-salam.exe" class="download">دانلود نرم افزار</a> -->
 		</header>
 		
 		<textarea class="code"></textarea>
