feat(toggle): add toggle btn

--- a/salam-online.html
+++ b/salam-online.html
@@ -17,6 +17,13 @@
 		<header class="header">
 			<button class="execute" disabled="">اجرا</button>
 			<!-- <a href="https://github.com/SalamLang/Salam-Desktop/raw/main/salam-windows.exe" download="salam-salam.exe" class="download">دانلود نرم افزار</a> -->
+			<div>
+				<span>تغییر حالت</span>
+				<label class="switch">
+					<input type="checkbox" id="toggleBtn">
+					<span class="slider"></span>
+				</label>
+			</div>
 		</header>
 		
 		<textarea class="code"></textarea>
