fix(toggle): fix toggle btn bug

--- a/salam-online.html
+++ b/salam-online.html
@@ -20,7 +20,7 @@
 			<div>
 				<span>تغییر حالت</span>
 				<label class="switch">
-					<input type="checkbox" id="toggleBtn" checked="">
+					<input type="checkbox" id="toggleBtn">
 					<span class="slider"></span>
 				</label>
 			</div>
