feat(save): add save btn

--- a/salam-online.html
+++ b/salam-online.html
@@ -15,7 +15,10 @@
 	</head>
 	<body>
 		<header class="header">
-			<button class="execute" disabled="">اجرا</button>
+			<div class="btn-wrapper">
+				<button class="execute" disabled="">اجرا</button>
+				<button class="save">ذخیره کد	</button>
+			</div>
 			<!-- <a href="https://github.com/SalamLang/Salam-Desktop/raw/main/salam-windows.exe" download="salam-salam.exe" class="download">دانلود نرم افزار</a> -->
 			<div>
 				<span>تغییر حالت</span>
