feat(sweetalert): add sweetalert

--- a/salam-online.html
+++ b/salam-online.html
@@ -28,6 +28,7 @@
 		<pre class="output"></pre>
 		<pre class="error"></pre>
 	
+		<script src="script/sweetalert.js"></script>
 		<script src="script/script.js"></script>
 	</body>
 </html>
