feat(overlay): add overlay

--- a/salam-online.html
+++ b/salam-online.html
@@ -8,6 +8,7 @@
 		<link rel="manifest" href="manifest.json">
 	</head>
 	<body>
+		<!-- Header and Btn -->
 		<header class="header">
 			<div class="btn-wrapper">
 				<button class="setting">
@@ -30,10 +31,18 @@
 			</div>
 		</header>
 		
+		<!-- Output -->
 		<textarea class="code"></textarea>
 		<iframe class="iframe"></iframe>
 		<pre class="output"></pre>
 		<pre class="error"></pre>
+
+		<!-- Modal -->
+		<div class="overlay"></div>
+		<div class="setting_modal">
+			<h1>تنظیمات</h1>
+			<hr>
+		</div>
 	
 		<script src="script/sweetalert.js"></script>
 		<script src="script/script.js"></script>
