feat(setting): setting item

--- a/salam-online.html
+++ b/salam-online.html
@@ -75,9 +75,13 @@
 				<input type="checkbox" id="toggleBtn">
 				<span class="slider"></span>
 			</label> -->
-			<div class="setting-ite-wrapper">
-				<div class="setting-item"></div>
-				<div class="setting-item"></div>
+			<div class="setting-item-wrapper">
+				<div class="setting-item active">
+					<img src="image/setting-1.png" alt="">
+				</div>
+				<div class="setting-item">
+					<img src="image/setting2.png" alt="">
+				</div>
 			</div>
 		</div>
 	</div>
