feat(setting): add setting item js

--- a/salam-online.html
+++ b/salam-online.html
@@ -76,10 +76,10 @@
 				<span class="slider"></span>
 			</label> -->
 			<div class="setting-item-wrapper">
-				<div class="setting-item active">
+				<div class="setting-item editor_mode1">
 					<img src="image/setting-1.png" alt="">
 				</div>
-				<div class="setting-item">
+				<div class="setting-item editor_mode2">
 					<img src="image/setting2.png" alt="">
 				</div>
 			</div>
