feat(dark): add dark mode

--- a/salam-online.html
+++ b/salam-online.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="fa-IR">
-
 <head>
 	<meta charset="UTF-8">
 	<title>آزمایش آنلاین زبان برنامه نویسی سلام - برنامه نویسی برای همه</title>
@@ -94,16 +93,22 @@
 		<hr>
 		<div class="setting-wrapper">
 			<span>تغییر حالت ادیتور: </span>
-			<!-- <label class="switch">
-				<input type="checkbox" id="toggleBtn">
-				<span class="slider"></span>
-			</label> -->
 			<div class="setting-item-wrapper">
 				<div class="setting-item editor_mode1">
 					<img src="image/setting-1.png" alt="">
 				</div>
 				<div class="setting-item editor_mode2">
 					<img src="image/setting2.png" alt="">
+				</div>
+			</div>
+
+			<span>تغییر تم ادیتور: </span>
+			<div class="setting-item-wrapper">
+				<div class="setting-item editor_light">
+					<img src="image/light.png" alt="">
+				</div>
+				<div class="setting-item editor_dark">
+					<img src="image/dark.png" alt="">
 				</div>
 			</div>
 		</div>
