feat(logoute): add logout btn

--- a/salam-online.html
+++ b/salam-online.html
@@ -65,7 +65,7 @@
 				</svg>
 			</button>
 		</div>
-		<a href="https://api.salamlang.ir/auth" class="login"><span class="title">ورود به سایت</span>
+		<a href="https://auth.salamlang.ir/auth" class="login"><span class="title">ورود به سایت</span>
 			<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
 				<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
