--- a/salam-online.html
+++ b/salam-online.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>آزمایش آنلاین زبان برنامه نویسی سلام - برنامه نویسی برای همه</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style/normalize.css">
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="manifest" href="manifest.json">
 </head>
