--- a/salam-online.html
+++ b/salam-online.html
@@ -99,20 +99,20 @@
 				<span>تغییر حالت ادیتور: </span>
 				<div class="setting-item-wrapper">
 					<div class="setting-item editor_mode1">
-						<img src="/image/setting-1.png" alt="">
+						<img src="/image/setting-1.png" alt="حالت تمام صفحه">
 					</div>
 					<div class="setting-item editor_mode2">
-						<img src="/image/setting2.png" alt="">
+						<img src="/image/setting2.png" alt="حالت نیمه صفحه">
 					</div>
 				</div>
 
 				<span>تغییر تم ادیتور: </span>
 				<div class="setting-item-wrapper">
 					<div class="setting-item editor_light">
-						<img src="/image/light.png" alt="">
+						<img src="/image/light.png" alt="ظاهر روشن">
 					</div>
 					<div class="setting-item editor_dark">
-						<img src="/image/dark.png" alt="">
+						<img src="/image/dark.png" alt="ظاهر تیره">
 					</div>
 				</div>
 			</div>
