--- a/salam-online.html
+++ b/salam-online.html
@@ -3,10 +3,35 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>آزمایش آنلاین زبان برنامه نویسی سلام - برنامه نویسی برای همه</title>
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 		<link rel="stylesheet" href="/style/normalize.css">
 		<link rel="stylesheet" href="/style/style.css">
+
 		<link rel="manifest" href="/manifest.json">
+
+		<meta name="description" content="آزمایش آنلاین زبان برنامه نویسی سلام - تجربه برنامه نویسی آسان و جذاب برای همه به ویژه کودکان و نوجوانان. یادگیری سریع و آسان با زبان سلام.">
+		<meta name="keywords" content="آزمایش آنلاین, زبان برنامه نویسی سلام, برنامه نویسی, زبان سلام, برنامه نویسی برای کودکان, یادگیری کدنویسی, توسعه نرم‌افزار">
+		<meta name="robots" content="index, follow">
+		<meta name="author" content="SalamLang Team">
+
+		<meta property="og:title" content="آزمایش آنلاین زبان برنامه نویسی سلام - برنامه نویسی برای همه">
+		<meta property="og:description" content="با زبان برنامه نویسی سلام، برنامه نویسی را به شکلی ساده و جذاب یاد بگیرید. مناسب برای کودکان و نوجوانان.">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://editor.salamlang.ir/">
+		<meta property="og:image" content="https://salamlang.ir/image/screenshot.png">
+		<meta property="og:locale" content="fa_IR">
+		<meta property="og:site_name" content="زبان برنامه نویسی سلام">
+
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="آزمایش آنلاین زبان برنامه نویسی سلام - برنامه نویسی برای همه">
+		<meta name="twitter:description" content="تجربه‌ای آسان و جذاب در یادگیری برنامه نویسی با زبان سلام، مناسب برای کودکان و نوجوانان.">
+		<meta name="twitter:image" content="https://salamlang.ir/image/screenshot.png">
+		<meta name="twitter:site" content="@SalamLang">
+		<meta name="twitter:creator" content="@SalamLang">
+
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<!-- Header -->
