--- a/salam-online.html
+++ b/salam-online.html
@@ -16,6 +16,8 @@
 		<meta name="robots" content="index, follow">
 		<meta name="author" content="SalamLang Team">
 
+		<link rel="canonical" href="https://editor.salamlang.ir/">
+
 		<meta property="og:title" content="آزمایش آنلاین زبان برنامه نویسی سلام - برنامه نویسی برای همه">
 		<meta property="og:description" content="با زبان برنامه نویسی سلام، برنامه نویسی را به شکلی ساده و جذاب یاد بگیرید. مناسب برای کودکان و نوجوانان.">
 		<meta property="og:type" content="website">
