--- a/salam-online.html
+++ b/salam-online.html
@@ -22,18 +22,18 @@
 		<meta property="og:description" content="با زبان برنامه نویسی سلام، برنامه نویسی را به شکلی ساده و جذاب یاد بگیرید. مناسب برای کودکان و نوجوانان.">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://editor.salamlang.ir/">
-		<meta property="og:image" content="https://salamlang.ir/image/screenshot.png">
+		<meta property="og:image" content="https://editor.salamlang.ir/image/screenshot.jpg">
 		<meta property="og:locale" content="fa_IR">
 		<meta property="og:site_name" content="زبان برنامه نویسی سلام">
 
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="آزمایش آنلاین زبان برنامه نویسی سلام - برنامه نویسی برای همه">
 		<meta name="twitter:description" content="تجربه‌ای آسان و جذاب در یادگیری برنامه نویسی با زبان سلام، مناسب برای کودکان و نوجوانان.">
-		<meta name="twitter:image" content="https://salamlang.ir/image/screenshot.png">
+		<meta name="twitter:image" content="https://editor.salamlang.ir/image/screenshot.jpg">
 		<meta name="twitter:site" content="@SalamLang">
 		<meta name="twitter:creator" content="@SalamLang">
 
-		<link rel="icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/image/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<!-- Header -->
