--- a/salam-online.html
+++ b/salam-online.html
@@ -14,7 +14,7 @@
 		<meta name="description" content="آزمایش آنلاین زبان برنامه نویسی سلام - تجربه برنامه نویسی آسان و جذاب برای همه به ویژه کودکان و نوجوانان. یادگیری سریع و آسان با زبان سلام.">
 		<meta name="keywords" content="آزمایش آنلاین, زبان برنامه نویسی سلام, برنامه نویسی, زبان سلام, برنامه نویسی برای کودکان, یادگیری کدنویسی, توسعه نرم‌افزار">
 		<meta name="robots" content="index, follow">
-		<meta name="author" content="SalamLang Team">
+		<meta name="author" content="Salam Language Team">
 
 		<link rel="canonical" href="https://editor.salamlang.ir/">
 
