working on editor

--- a/salam-online.html
+++ b/salam-online.html
@@ -128,7 +128,11 @@
 	</header>
 
 	<!-- Output -->
-	<textarea class="code"></textarea>
+	<div contenteditable="" class="code">
+		<span style="background-color: yellow;">function</span> myFunc() {
+		<span style="background-color: yellow;">return</span> 42;
+		}
+	</div>
 	<iframe class="iframe"></iframe>
 	<pre class="output"></pre>
 	<pre class="error"></pre>
